--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@ant-design/charts": "^2.0.3",
+    "@reduxjs/toolkit": "^2.1.0",
     "antd": "^5.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.21.3"
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.21.3",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
