--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/charts": "^2.0.3",
     "@reduxjs/toolkit": "^2.1.0",
     "antd": "^5.13.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
