--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ant-design/charts": "^2.0.3",
     "@reduxjs/toolkit": "^2.1.0",
     "antd": "^5.13.2",
     "jwt-decode": "^4.0.0",
@@ -20,6 +19,7 @@
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
+    "recharts": "^2.11.0",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
