--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "antd": "^5.13.2",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-lottie": "^1.2.4",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "recharts": "^2.11.0",
@@ -25,6 +27,7 @@
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-lottie": "^1.2.10",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
