--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
     "antd": "^5.13.2",
+    "dayjs": "^1.11.10",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "prop-types": "^15.8.1",
